fix struct center stretch issue

--- a/src/style.css
+++ b/src/style.css
@@ -145,3 +145,11 @@ div.step > .header {
 .invalid {
     padding-top: 20px;
 }
+.field {
+    border-left: solid 1px color-mix(in srgb, var(--altkw), transparent);
+    border-radius: 0;
+    padding-left: 5px;
+    align-self: stretch;
+    display: flex;
+    align-items: center;
+}
